welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:10: error: forward reference extends over definition of value decalage
    baisseBrosse() ; setCouleurBrosse(T(decalage)) ; leveBrosse()
                                        ^